--- a/app/src/main/res/layout/activity_info.xml
+++ b/app/src/main/res/layout/activity_info.xml
@@ -16,8 +16,205 @@
         app:layout_constraintTop_toTopOf="parent"
         android:layout_marginStart="16dp"
         app:layout_constraintLeft_toLeftOf="parent"
+        android:layout_marginEnd="16dp"
+        app:layout_constraintRight_toRightOf="parent"
+        android:layout_marginLeft="16dp"
+        android:layout_marginRight="16dp" />
+
+    <GridLayout
+        android:layout_width="wrap_content"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintBottom_toBottomOf="parent"
         android:layout_marginBottom="16dp"
-        android:layout_marginEnd="16dp"
-        app:layout_constraintRight_toRightOf="parent" />
+        android:layout_height="wrap_content"
+        android:layout_marginTop="8dp"
+        app:layout_constraintTop_toBottomOf="@+id/imageView">
+
+        <TextView
+            android:text="Буква"
+            android:layout_height="wrap_content"
+            android:id="@+id/tvLetter"
+            android:layout_gravity="center_horizontal"
+            android:padding="@dimen/grid_margin"
+            android:gravity="center"
+            android:layout_width="80dp"
+            android:background="@drawable/rect_adapter" />
+
+        <TextView
+            android:text="Зонд 1"
+            android:layout_height="wrap_content"
+            android:id="@+id/tvZond1"
+            android:layout_gravity="center_horizontal"
+            android:padding="@dimen/grid_margin"
+            android:gravity="center"
+            android:layout_width="80dp"
+            android:background="@drawable/rect_adapter" />
+
+        <TextView
+            android:text="Зонд 2"
+            android:layout_height="wrap_content"
+            android:id="@+id/tvZond2"
+            android:layout_gravity="center_horizontal"
+            android:padding="@dimen/grid_margin"
+            android:gravity="center"
+            android:layout_width="80dp"
+            android:background="@drawable/rect_adapter" />
+
+        <TextView
+            android:text="Зонд 3"
+            android:layout_height="wrap_content"
+            android:id="@+id/tvZond3"
+            android:layout_gravity="center_horizontal"
+            android:padding="@dimen/grid_margin"
+            android:gravity="center"
+            android:layout_width="80dp"
+            android:background="@drawable/rect_adapter" />
+
+        <TextView
+            android:text="Z"
+            android:layout_height="wrap_content"
+            android:id="@+id/tvZ"
+            android:layout_row="1"
+            android:layout_column="0"
+            android:layout_gravity="center_horizontal"
+            android:padding="@dimen/grid_margin"
+            android:gravity="center"
+            android:layout_width="80dp"
+            android:background="@drawable/rect_adapter" />
+
+        <TextView
+            android:text="L"
+            android:layout_height="wrap_content"
+            android:id="@+id/tvL"
+            android:layout_row="2"
+            android:layout_column="0"
+            android:layout_gravity="center_horizontal"
+            android:padding="@dimen/grid_margin"
+            android:gravity="center"
+            android:layout_width="80dp"
+            android:background="@drawable/rect_adapter" />
+
+        <TextView
+            android:text="Y"
+            android:layout_height="wrap_content"
+            android:id="@+id/tvY"
+            android:layout_row="3"
+            android:layout_column="0"
+            android:layout_gravity="center_horizontal"
+            android:padding="@dimen/grid_margin"
+            android:gravity="center"
+            android:layout_width="80dp"
+            android:background="@drawable/rect_adapter" />
+
+        <TextView
+            android:text="0"
+            android:layout_height="wrap_content"
+            android:id="@+id/tv_y_zond3"
+            android:layout_row="3"
+            android:layout_column="3"
+            android:layout_gravity="center_horizontal"
+            android:padding="@dimen/grid_margin"
+            android:gravity="center"
+            android:layout_width="80dp"
+            android:background="@drawable/rect_adapter" />
+
+        <TextView
+            android:text="0"
+            android:layout_height="wrap_content"
+            android:id="@+id/tv_y_zond2"
+            android:layout_row="3"
+            android:layout_column="2"
+            android:layout_gravity="center_horizontal"
+            android:padding="@dimen/grid_margin"
+            android:gravity="center"
+            android:layout_width="80dp"
+            android:background="@drawable/rect_adapter" />
+
+        <TextView
+            android:text="0"
+            android:layout_height="wrap_content"
+            android:id="@+id/tv_z_zond3"
+            android:layout_row="1"
+            android:layout_column="3"
+            android:layout_gravity="center_horizontal"
+            android:padding="@dimen/grid_margin"
+            android:gravity="center"
+            android:layout_width="80dp"
+            android:background="@drawable/rect_adapter" />
+
+        <TextView
+            android:text="0"
+            android:layout_height="wrap_content"
+            android:id="@+id/tv_l_zond3"
+            android:layout_row="2"
+            android:layout_column="3"
+            android:layout_gravity="center_horizontal"
+            android:padding="@dimen/grid_margin"
+            android:gravity="center"
+            android:layout_width="80dp"
+            android:background="@drawable/rect_adapter" />
+
+        <TextView
+            android:text="0"
+            android:layout_height="wrap_content"
+            android:id="@+id/tv_z_zond2"
+            android:layout_row="1"
+            android:layout_column="2"
+            android:layout_gravity="center_horizontal"
+            android:padding="@dimen/grid_margin"
+            android:gravity="center"
+            android:layout_width="80dp"
+            android:background="@drawable/rect_adapter" />
+
+        <TextView
+            android:text="0"
+            android:layout_height="wrap_content"
+            android:id="@+id/tv_l_zond2"
+            android:layout_row="2"
+            android:layout_column="2"
+            android:layout_gravity="center_horizontal"
+            android:padding="@dimen/grid_margin"
+            android:gravity="center"
+            android:layout_width="80dp"
+            android:background="@drawable/rect_adapter" />
+
+        <TextView
+            android:text="0"
+            android:layout_height="wrap_content"
+            android:id="@+id/tv_y_zond1"
+            android:layout_row="3"
+            android:layout_column="1"
+            android:layout_gravity="center_horizontal"
+            android:padding="@dimen/grid_margin"
+            android:gravity="center"
+            android:layout_width="80dp"
+            android:background="@drawable/rect_adapter" />
+
+        <TextView
+            android:text="0"
+            android:layout_height="wrap_content"
+            android:id="@+id/tv_l_zond1"
+            android:layout_row="2"
+            android:layout_column="1"
+            android:layout_gravity="center_horizontal"
+            android:padding="@dimen/grid_margin"
+            android:gravity="center"
+            android:layout_width="80dp"
+            android:background="@drawable/rect_adapter" />
+
+        <TextView
+            android:text="0"
+            android:layout_height="wrap_content"
+            android:id="@+id/tv_z_zond1"
+            android:layout_row="1"
+            android:layout_column="1"
+            android:layout_gravity="center_horizontal"
+            android:padding="@dimen/grid_margin"
+            android:gravity="center"
+            android:layout_width="80dp"
+            android:background="@drawable/rect_adapter" />
+
+    </GridLayout>
+
 </android.support.constraint.ConstraintLayout>
