--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -26,14 +26,15 @@
     android:id="@+id/btn_ok"
     android:textAppearance="@style/TextAppearance.AppCompat.Body1"
     style="@style/Widget.AppCompat.Button.Colored"
-    android:background="@color/colorPrimary"
+    android:background="@drawable/rect_adapter_button_active"
     android:textColor="@android:color/background_light"
     android:textStyle="normal|bold"
     android:fontFamily="sans-serif"
     app:layout_constraintLeft_toLeftOf="@+id/s_view"
     android:onClick="onClickBtnOk"
     android:layout_marginTop="64dp"
-    app:layout_constraintTop_toBottomOf="@+id/s_view" />
+    app:layout_constraintTop_toBottomOf="@+id/s_view"
+        android:enabled="true" />
 
     <Button
     android:text="Очистить"
@@ -42,14 +43,15 @@
     android:id="@+id/btn_reset"
     style="@style/Widget.AppCompat.Button.Colored"
     android:textAppearance="@style/TextAppearance.AppCompat.Body1"
-    android:background="@color/colorPrimary"
+    android:background="@drawable/rect_adapter_button_active"
     android:textColor="@android:color/background_light"
     android:textStyle="normal|bold"
     android:fontFamily="sans-serif"
     app:layout_constraintTop_toBottomOf="@+id/btn_info"
     app:layout_constraintLeft_toLeftOf="@+id/btn_info"
     android:onClick="onClickBtnReset"
-    android:layout_marginTop="16dp" />
+    android:layout_marginTop="16dp"
+        android:enabled="true" />
 
     <Button
     android:text="Подробнее"
@@ -58,7 +60,7 @@
     android:id="@+id/btn_info"
     android:textAppearance="@style/TextAppearance.AppCompat.Body1"
     style="@style/Widget.AppCompat.Button.Colored"
-    android:background="@color/colorPrimary"
+    android:background="@drawable/rect_adapter_button_inactive"
     android:textColor="@android:color/background_light"
     android:textStyle="normal|bold"
     android:fontFamily="sans-serif"
@@ -68,6 +70,7 @@
     app:layout_constraintHorizontal_bias="0.0"
     android:onClick="onClickBtnInfo"
     app:layout_constraintTop_toBottomOf="@+id/btn_ok"
-    android:layout_marginTop="16dp" />
+    android:layout_marginTop="16dp"
+        android:enabled="false" />
 
 </android.support.constraint.ConstraintLayout>
